# data-alchemy

./: README.md  app.ipynb  env.example  main.ipynb  main.py  pyproject.toml
data_alchemy/: __init__.py  app.py  config.py  llm.py  models.py  prompts.py  render.py  synthesis.py
