[project]
name = "data-alchemy"
version = "0.1.0"
description = "A Gradio app for generating realistic synthetic datasets with local Ollama models."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.23.0",
    "gradio>=6.19.0",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "transformers>=5.12.1",
]
